[gd_scene load_steps=4 format=2]

[ext_resource path="res://typedMessage.gd" type="Script" id=1]
[ext_resource path="res://Assets/Press_Start_2P/PressStart_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/laptop-keyboard-1.wav" type="AudioStream" id=3]

[node name="typedMessage" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 0.8

[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
